Fix dark mode contrast issues with modal buttons

--- a/src/components/ids-button/ids-button-base.scss
+++ b/src/components/ids-button/ids-button-base.scss
@@ -663,7 +663,7 @@
   &.btn-secondary,
   &.btn-tertiary {
     background-color: var(--ids-modal-color-background);
-    color: var(--ids-color-gray-80);
+    color: var(--ids-modal-button-secondary-color-default);
 
     &:not(.hide-focus).is-active,
     &:not(.hide-focus):focus {
@@ -671,7 +671,7 @@
     }
 
     &:hover {
-      color: var(--ids-color-gray-100);
+      color: var(--ids-modal-button-secondary-color-hover);
     }
 
     &[disabled] {
